fix css for scrollbar

--- a/app/globals.css
+++ b/app/globals.css
@@ -16,6 +16,14 @@
   }
 }
 
+html,
+body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
 body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
